add browserfy + coffeeify

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "gulp-plumber": "*",
     "gulp-karma": "*",
     "gulp-concat": "*",
-    "gulp-csslint": "*"
+    "gulp-csslint": "*",
+    "gulp-browserify": "latest",
+    "gulp-rename": "latest",
+    "coffeeify": "latest"
   }
 }
