--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,7 @@
     "bower_components"
   ],
   "dependencies": {
-    "tweenjs": "latest",
-    "requirejs": "latest"
+    "tweenjs": "latest"
   }
 }
 
