add karma tests + coverage, project restruct

--- a/package.json
+++ b/package.json
@@ -3,32 +3,43 @@
   "version": "0.0.0",
   "license": "MIT",
   "author": {
-    "name":   "LegoMushroom",
-    "email":  "legomushroom@gmail.com",
-    "url":    "http://legomushroom.com"
+    "name": "LegoMushroom",
+    "email": "legomushroom@gmail.com",
+    "url": "http://legomushroom.com"
   },
   "private": false,
   "dependencies": {},
   "devDependencies": {
-    "nodemon": "*",
+    "coffeeify": "latest",
     "gulp": "latest",
-    "gulp-minify-css": "~0.3.0",
-    "gulp-stylus": "latest",
     "gulp-autoprefixer": "0.0.6",
-    "gulp-notify": "~0.5.1",
-    "gulp-livereload": "~1.2.0",
-    "gulp-coffee": "~1.4.1",
+    "gulp-browserify": "latest",
     "gulp-changed": "~0.2.0",
-    "gulp-jade": "~0.4.2",
-    "gulp-watch": "*",
+    "gulp-coffee": "~1.4.1",
     "gulp-coffeelint": "*",
-    "gulp-plumber": "*",
-    "gulp-karma": "*",
     "gulp-concat": "*",
     "gulp-csslint": "*",
-    "gulp-browserify": "latest",
+    "gulp-jade": "~0.4.2",
+    "gulp-karma": "*",
+    "gulp-livereload": "~1.2.0",
+    "gulp-minify-css": "~0.3.0",
+    "gulp-notify": "~0.5.1",
+    "gulp-plumber": "*",
     "gulp-rename": "latest",
+    "gulp-stylus": "latest",
     "gulp-uglify": "latest",
-    "coffeeify": "latest"
+    "gulp-watch": "*",
+    "karma": "^0.12.24",
+    "karma-browserify": "^2.0.0",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-cli": "0.0.4",
+    "karma-coverage": "0.2.6",
+    "karma-jasmine": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "browserify-istanbul": "^0.1.2",
+    "brfs": "^1.2.0",
+    "browserify-shim": "~3.8.0",
+    "browserify": "^6.2.0",
+    "nodemon": "*"
   }
 }
