--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mojs",
   "description": "motion graphics toolbelt for the web",
-  "version": "0.20.",
+  "version": "0.20.0",
   "license": "MIT",
   "private": false,
   "scripts": {
