ad rand values support(+units), + sauce labs

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mojs",
   "description": "motion graphics toolbelt for the web",
-  "version": "0.37.0",
+  "version": "0.40.1",
   "license": "MIT",
   "private": false,
   "scripts": {
@@ -64,6 +64,7 @@
     "karma-coverage": "0.2.6",
     "karma-jasmine": "^0.2.0",
     "karma-phantomjs-launcher": "^0.1.4",
+    "karma-sauce-launcher": "^0.2.10",
     "nodemon": "*",
     "run-sequence": "^1.0.2"
   }
