--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,8 @@ node_js:
 
 after_script:
   - if [[ `node --version` == *v0.10* ]]; then cat ./coverage/lcov-report/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
+
+env:
+  global:
+    - SAUCE_USERNAME='legomushroom'
+    - SAUCE_ACCESS_KEY='405fc371-6f38-4461-bef0-64633dd7ce33'
