--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
   "name": "mojs",
-  "version": "0.190.0",
+  "version": "0.190.1",
   "homepage": "https://github.com/legomushroom/mojs",
   "authors": [
     "Oleg Solomka @legomushroom <legomushroom@gmail.com>"
   ],
   "description": "motion graphics toolbelt for the web",
   "license": "MIT",
-  "main": "dist/mo.js",
+  "main": "build/mo.min.js",
   "keywords": [
     "motion",
     "motion",
