--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   "homepage": "https://github.com/legomushroom/mojs",
   "main": "dis/mojs.min.js",
   "dependencies": {
-    "coveralls": "^2.11.2",
-    "gulp-coffeeify": "^0.1.8",
-    "gulp-insert": "^0.4.0"
   },
   "devDependencies": {
+    "coveralls": "^2.11.2",
+    "gulp-coffeeify": "^0.1.8",
+    "gulp-insert": "^0.4.0",
     "brfs": "^1.2.0",
     "browserify": "^6.2.0",
     "browserify-istanbul": "^0.1.2",
