--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chalk": "^0.5.1",
     "coffeeify": "latest",
     "coveralls": "^2.11.2",
+    "groc": "git+https://github.com/gilt/groc.git",
     "gulp": "latest",
     "gulp-autoprefixer": "0.0.6",
     "gulp-browserify": "latest",
