cover by docs for motion-path defaults

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "chalk": "^0.5.1",
     "coffeeify": "latest",
     "coveralls": "^2.11.2",
-    "grock": "https://registry.npmjs.org/grock/-/grock-0.3.8.tgz",
+    "grock": "git+https://github.com/legomushroom/grock.git",
     "gulp": "latest",
     "gulp-autoprefixer": "0.0.6",
     "gulp-browserify": "latest",
@@ -47,7 +47,6 @@
     "gulp-coffeelint": "*",
     "gulp-concat": "*",
     "gulp-csslint": "*",
-    "gulp-groc": "^0.4.1",
     "gulp-insert": "^0.4.0",
     "gulp-jade": "~0.4.2",
     "gulp-json-editor": "^2.2.1",
