--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,10 @@ env:
 
 notifications:
   slack: mojs:n6WXx45anfQn03fJu5Yw0Btt
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/64e4b293f47c28c8c3c1
+      - https://webhooks.gitter.im/e/71f80b0a176a6ae97004
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start:   false   # default: false
