--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
-sudo:     required
 language: node_js
 node_js:
   - "0.10"
 
 after_script:
+  - if [[ `node --version` == *v0.10* ]]; then cat ./coverage/
+  - if [[ `node --version` == *v0.10* ]]; then ls
+  - if [[ `node --version` == *v0.10* ]]; then cat ./coverage/lcov-report/
+  - if [[ `node --version` == *v0.10* ]]; then ls
   - if [[ `node --version` == *v0.10* ]]; then cat ./coverage/lcov-report/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
 
 env:
