--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ node_js:
   - "0.10"
 
 after_script:
+  - if [[ `node --version` == *v0.10* ]]; then ls; fi
   - if [[ `node --version` == *v0.10* ]]; then cd ./coverage/; fi
-  - if [[ `node --version` == *v0.10* ]]; then cd ./lcov-report/; fi
   - if [[ `node --version` == *v0.10* ]]; then ls; fi
   - if [[ `node --version` == *v0.10* ]]; then cd ./lcov-report/; fi
   - if [[ `node --version` == *v0.10* ]]; then ls; fi
