--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ after_script:
   - if [[ `node --version` == *v0.10* ]]; then ls; fi
   - if [[ `node --version` == *v0.10* ]]; then cd ./lcov-report/; fi
   - if [[ `node --version` == *v0.10* ]]; then ls; fi
+  - if [[ `node --version` == *v0.10* ]]; then cat lcov.info; fi
   - if [[ `node --version` == *v0.10* ]]; then cd ../../; fi
   - if [[ `node --version` == *v0.10* ]]; then cat ./coverage/lcov-report/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
 
