--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,8 @@ after_script:
 
 env:
   global:
-    - SAUCE_USERNAME='legomushroom-dev'
-    - SAUCE_ACCESS_KEY='abb1e109-1def-45c5-bb30-53e256d9f889'
+    - SAUCE_USERNAME='legomushroom'
+    - SAUCE_ACCESS_KEY='6982f2ea-fd37-453f-9cc6-58ea67254b66'
 
 notifications:
   slack: mojs:n6WXx45anfQn03fJu5Yw0Btt
-  webhooks:
-    urls:
-      - https://webhooks.gitter.im/e/64e4b293f47c28c8c3c1
-      - https://webhooks.gitter.im/e/71f80b0a176a6ae97004
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start:   false   # default: false
