--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mo-js",
   "description": "motion graphics toolbelt for the web",
-  "version": "0.146.9",
+  "version": "0.147.3",
   "license": "MIT",
   "private": false,
   "scripts": {
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/legomushroom/mojs",
   "dependencies": {},
   "devDependencies": {
+    "benchmark": "^1.0.0",
     "brfs": "^1.2.0",
     "browserify": "^6.2.0",
     "browserify-istanbul": "^0.1.2",
