--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ after_script:
 
 env:
   global:
-    - SAUCE_USERNAME='legomushroom-dev'
-    - SAUCE_ACCESS_KEY='abb1e109-1def-45c5-bb30-53e256d9f889'
+    - SAUCE_USERNAME=saucedevname
+    - SAUCE_ACCESS_KEY=saucedev
 
 notifications:
   slack: mojs:n6WXx45anfQn03fJu5Yw0Btt
