add missing dependencies in package.json

--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
   "homepage": "https://github.com/legomushroom/mojs",
   "dependencies": {},
   "devDependencies": {
+    "6to5-loader": "^3.0.0",
+    "6to5-runtime": "^3.6.5",
     "benchmark": "^1.0.0",
     "brfs": "^1.2.0",
     "browserify": "^6.2.0",
     "browserify-istanbul": "^0.1.2",
     "browserify-shim": "~3.8.0",
     "chalk": "^0.5.1",
+    "coffee-loader": "^0.7.2",
     "coffeeify": "latest",
     "coveralls": "^2.11.2",
     "grock": "git+https://github.com/legomushroom/grock.git",
