--- a/package.json
+++ b/package.json
@@ -29,10 +29,18 @@
     "url": "https://github.com/legomushroom/mojs/issues"
   },
   "homepage": "https://github.com/legomushroom/mojs",
-  "dependencies": {},
+  "dependencies": {
+    "babel-runtime": "^6.5.0"
+  },
   "devDependencies": {
     "6to5-loader": "^3.0.0",
     "6to5-runtime": "^3.6.5",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.2",
+    "babel-plugin-transform-runtime": "^6.5.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "benchmark": "^1.0.0",
     "brfs": "^1.2.0",
     "browserify": "^6.2.0",
