--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "6to5-runtime": "^3.6.5",
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.2",
+    "babel-plugin-transform-es2015-classes": "^6.6.5",
     "babel-plugin-transform-runtime": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "brfs": "^1.2.0",
