--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "mo-js",
   "description": "motion graphics toolbelt for the web",
-  "version": "0.260.2",
+  "version": "0.261.0",
   "license": "MIT",
   "private": false,
   "scripts": {
     "build": "",
     "test": "karma start --single-run"
   },
-  "main": "lib/mojs.js",
+  "main": "build/mo.js",
   "keywords": [
     "motion",
     "effects",
