delta class: initial commit

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "gulp-uglify": "latest",
     "gulp-watch": "*",
     "karma": "^0.12.24",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "^2.0.0",
     "karma-chrome-launcher": "^0.1.4",
     "karma-clear-screen-reporter": "0.0.1",
