[tweener]: initial commit

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,18 @@
 {
-  "presets": [ "es2015", "babel-preset-stage-2" ]
+  "presets": [ "babili" ],
+  "plugins": [
+    "transform-es2015-shorthand-properties",
+    "transform-es2015-template-literals",
+    "transform-es2015-arrow-functions",
+    "transform-es2015-block-scoping",
+    "transform-es2015-destructuring",
+    "transform-es2015-parameters",
+    "transform-class-properties",
+    "transform-es2015-classes",
+    "transform-es2015-spread",
+    "check-es2015-constants",
+    "transform-strict-mode",
+    "transform-es2015-for-of",
+    "transform-object-rest-spread"
+  ]
 }
