--- a/package.json
+++ b/package.json
@@ -59,8 +59,11 @@
     "babel-runtime": "^6.23.0",
     "compression-webpack-plugin": "^0.4.0",
     "coveralls": "^2.12.0",
-    "eslint": "^4.1.0",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
