--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 
 after_script:
   - if [[ `node --version` == *v0.10* ]]; then cat ./coverage/lcov-report/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
+  - if [[ `node --version` == *v0.10* ]]; then cat ./coverage/lcov-report/lcov.info | ./node_modules/.bin/codacy-coverage; fi
 
 env:
   global:
@@ -11,4 +12,4 @@ env:
     - SAUCE_ACCESS_KEY="$SAUCE_DEV_KEY"
 
 notifications:
-  slack: mojs:n6WXx45anfQn03fJu5Yw0Btt
+  slack: $SLACK_WEB_HOOK
