--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-runtime": "^6.23.0",
+    "codacy-coverage": "^2.0.2",
     "compression-webpack-plugin": "^0.4.0",
     "coveralls": "^2.12.0",
     "eslint": "^3.19.0",
