--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,15 @@ language: node_js
 node_js:
   - "6.11.0"
 
-after_script:
-  - cat ./coverage/lcov-report/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
-  - cat ./coverage/lcov-report/lcov.info | ./node_modules/.bin/codacy-coverage; fi
-
 env:
   global:
     - SAUCE_USERNAME="$SAUCE_DEV_NAME"
     - SAUCE_ACCESS_KEY="$SAUCE_DEV_KEY"
     - CODACY_PROJECT_TOKEN="$CODACY_TOKEN"
+
+after_script:
+  - cat ./coverage/lcov-report/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - cat ./coverage/lcov-report/lcov.info | ./node_modules/.bin/codacy-coverage
 
 notifications:
   slack: $SLACK_WEB_HOOK
