[babelrc]: add exponential plugin

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-plugin-transform-es2015-parameters": "^6.23.0",
     "babel-plugin-transform-es2015-shorthand-properties": "^6.22.0",
     "babel-plugin-transform-es2015-spread": "^6.22.0",
+    "babel-plugin-transform-exponentiation-operator": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-strict-mode": "^6.22.0",
