--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
   "plugins": [
     "transform-es2015-shorthand-properties",
     "transform-es2015-template-literals",
+    "transform-exponentiation-operator",
     "transform-es2015-arrow-functions",
     "transform-es2015-block-scoping",
     "transform-es2015-destructuring",
