[travis]: add test script

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
 
 script:
   - npm run lint
+  - npm run test
 
 after_script:
   - cat ./coverage/lcov-report/lcov.info | ./node_modules/coveralls/bin/coveralls.js
