[travis]: add coveralls token

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
     - SAUCE_USERNAME="$SAUCE_DEV_NAME"
     - SAUCE_ACCESS_KEY="$SAUCE_DEV_KEY"
     - CODACY_PROJECT_TOKEN="$CODACY_TOKEN"
+    - COVERALLS_REPO_TOKEN="$COVERALLS_MOJS_TOKEN"
 
 script:
   - npm run lint
