working on lcov report coverage

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "analyze": "webpack --json > stats.json",
     "lint": "eslint ./src",
     "stats:js": "echo \"Size of mo.js is $(gzip -c build/mo.js | wc -c) bytes gzipped\"",
-    "precommit": "npm run lint && npm test"
+    "prepush": "npm run lint && npm test"
   },
   "main": "build/mo.js",
   "keywords": [
@@ -68,11 +68,10 @@
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.1.0",
     "husky": "^0.14.1",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.5.0",
+    "jasmine-core": "^2.6.4",
+    "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-clear-screen-reporter": "^1.0.0",
-    "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
