[karma]: make `lcov` report to show up

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
+  "env": {
+    "test": {
+      "plugins": [ "istanbul" ]
+    }
+  },
   "moduleId": "mojs",
   "passPerPreset": true,
   "presets": [ "babili" ],
