fix coverage report path

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
 
 after_script:
   - cat ./coverage/lcov-report/lcov.info | ./node_modules/coveralls/bin/coveralls.js
-  - cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage
+  - cat ./coverage/lcov-report/lcov.info | ./node_modules/.bin/codacy-coverage
 
 notifications:
     slack: mojs:pdoYLMGz4fOmYH7mzpXAGVjn
