--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "no-bitwise": 0,
     "no-plusplus": 0,
     "no-continue": 0,
+    "no-prototype-builtins": 0,
     "consistent-return": 0,
     "no-param-reassign": 0,
     "no-floating-decimal": 0,
