--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "mo-js",
   "description": "motion graphics toolbelt for the web",
-  "version": "0.288.1",
+  "version": "0.288.2",
   "license": "MIT",
   "private": false,
   "scripts": {
     "build": "",
+    "start": "webpack",
     "test": "karma start --single-run"
   },
   "main": "build/mo.js",
