--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   "authors": [
     "Oleg Solomka @legomushroom <legomushroom@gmail.com>"
   ],
-  "main": "build/mo.min.js",
+  "main": "build/mo.js",
   "keywords": [
     "motion",
     "graphics",
