fix Sauce Lab config for Travis tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ after_script:
 
 env:
   global:
-    - SAUCE_USERNAME='legomushroom'
-    - SAUCE_ACCESS_KEY='6982f2ea-fd37-453f-9cc6-58ea67254b66'
+    - SAUCE_USERNAME="$SAUCE_DEV_NAME"
+    - SAUCE_ACCESS_KEY="$SAUCE_DEV_KEY"
 
 notifications:
   slack: mojs:n6WXx45anfQn03fJu5Yw0Btt
