--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mo-js",
-  "description": "motion graphics toolbelt for the web",
+  "description": "The motion graphics toolbelt for the web",
   "version": "0.288.2",
   "license": "MIT",
   "private": false,
