--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/legomushroom/mojs.git"
+    "url": "https://github.com/mojs/mojs.git"
   },
   "bugs": {
-    "url": "https://github.com/legomushroom/mojs/issues"
+    "url": "https://github.com/mojs/mojs/issues"
   },
-  "homepage": "https://github.com/legomushroom/mojs",
+  "homepage": "https://github.com/mojs/mojs",
   "dependencies": {
     "babel-runtime": "^6.5.0"
   },
