--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mojs/mojs.git"
+    "url": "git+https://github.com/mojs/mojs.git"
   },
   "bugs": {
     "url": "https://github.com/mojs/mojs/issues"
