Define `mojs` as a scoped package
Use the `mojs` NPM organization to host the package for better consistency. Using `core` as main library name will allow to split the code into multiple modules/packages in the future if needed. Note that other mojs packages will be hosted on that organization too.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mo-js",
+  "name": "@mojs/core",
   "description": "The motion graphics toolbelt for the web",
   "version": "0.288.2",
   "license": "MIT",
