Fix bad json syntax

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "name": "Oleg Solomka",
     "email": "legomushroom@gmail.com",
     "url": "https://twitter.com/legomushroom",
-    "github": "@legomushroom",
+    "github": "@legomushroom"
   },
   "repository": {
     "type": "git",
