--- a/package.json
+++ b/package.json
@@ -56,21 +56,21 @@
     "coveralls": "^2.11.2",
     "grock": "git+https://github.com/legomushroom/grock.git",
     "gulp": "latest",
-    "gulp-autoprefixer": "0.0.6",
+    "gulp-autoprefixer": "^7.0.0",
     "gulp-browserify": "latest",
-    "gulp-changed": "~0.2.0",
-    "gulp-coffee": "~1.4.1",
+    "gulp-changed": "^4.0.1",
+    "gulp-coffee": "^3.0.3",
     "gulp-coffeeify": "^0.1.8",
     "gulp-coffeelint": "*",
     "gulp-concat": "*",
     "gulp-csslint": "*",
-    "gulp-insert": "^0.4.0",
-    "gulp-jade": "~0.4.2",
+    "gulp-insert": "^0.5.0",
+    "gulp-jade": "^1.1.0",
     "gulp-json-editor": "^2.2.1",
     "gulp-karma": "*",
-    "gulp-livereload": "~1.2.0",
-    "gulp-minify-css": "~0.3.0",
-    "gulp-notify": "~0.5.1",
+    "gulp-livereload": "^4.0.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-notify": "^3.2.0",
     "gulp-plumber": "*",
     "gulp-rename": "latest",
     "gulp-shell": "^0.7.1",
