Upgraded Karma to latest versions
Also fixed a typo in karma.config file resulting in a folder named ’ coverage’ with a space before it, resulting in git wanting to upload these coverage files.

--- a/package.json
+++ b/package.json
@@ -76,16 +76,16 @@
     "gulp-stylus": "latest",
     "gulp-uglify": "latest",
     "gulp-watch": "*",
-    "karma": "^0.12.24",
-    "karma-babel-preprocessor": "^6.0.1",
-    "karma-browserify": "^6.1.0",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-clear-screen-reporter": "0.0.1",
-    "karma-cli": "0.0.4",
-    "karma-coverage": "0.2.6",
-    "karma-jasmine": "^0.2.0",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-sauce-launcher": "^0.2.10",
+    "karma": "^4.4.1",
+    "karma-babel-preprocessor": "^7.0.0",
+    "karma-browserify": "^7.0.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-clear-screen-reporter": "^1.0.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage": "^2.0.1",
+    "karma-jasmine": "^3.1.1",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sauce-launcher": "^2.0.2",
     "mojs-player": "^0.40.0",
     "nodemon": "^2.0.2",
     "phantomjs-polyfill": "0.0.2",
