--- a/package.json
+++ b/package.json
@@ -54,28 +54,28 @@
     "coffeeify": "latest",
     "coveralls": "^2.11.2",
     "grock": "git+https://github.com/legomushroom/grock.git",
-    "gulp": "latest",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
-    "gulp-browserify": "latest",
+    "gulp-browserify": "^0.5.1",
     "gulp-changed": "^4.0.2",
     "gulp-coffee": "^3.0.3",
     "gulp-coffeeify": "^0.1.8",
-    "gulp-coffeelint": "*",
-    "gulp-concat": "*",
-    "gulp-csslint": "*",
+    "gulp-coffeelint": "^0.6.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-csslint": "^1.0.1",
     "gulp-insert": "^0.5.0",
     "gulp-jade": "^1.1.0",
     "gulp-json-editor": "^2.5.4",
-    "gulp-karma": "*",
+    "gulp-karma": "0.0.5",
     "gulp-livereload": "^4.0.2",
     "gulp-minify-css": "^1.2.4",
     "gulp-notify": "^3.2.0",
-    "gulp-plumber": "*",
-    "gulp-rename": "latest",
+    "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^2.0.0",
     "gulp-shell": "^0.8.0",
-    "gulp-stylus": "latest",
-    "gulp-uglify": "latest",
-    "gulp-watch": "*",
+    "gulp-stylus": "^2.7.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-watch": "^5.0.1",
     "karma": "^4.4.1",
     "karma-babel-preprocessor": "^7.0.0",
     "karma-browserify": "^7.0.0",
