--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "url": "https://github.com/mojs/mojs/issues"
   },
   "homepage": "https://github.com/mojs/mojs",
-  "dependencies": {
-    "babel-runtime": "^6.5.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "6to5-loader": "^3.0.0",
     "6to5-runtime": "^3.6.5",
@@ -45,6 +43,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-2": "^6.11.0",
+    "babel-runtime": "^6.5.0",
     "brfs": "^1.2.0",
     "browserify": "^6.2.0",
     "browserify-istanbul": "^0.1.2",
