--- a/bower.json
+++ b/bower.json
@@ -4,29 +4,9 @@
   "version": "0.288.2",
   "license": "MIT",
   "homepage": "https://github.com/legomushroom/mojs",
-  "authors": [
-    "Oleg Solomka @legomushroom <legomushroom@gmail.com>"
-  ],
+  "authors": ["Oleg Solomka @legomushroom <legomushroom@gmail.com>"],
   "main": "build/mo.min.js",
-  "keywords": [
-    "motion",
-    "graphics",
-    "animation",
-    "effects"
-  ],
-  "ignore": [
-    "**/.*",
-    "bower_components",
-    "node_modules",
-    "coverage",
-    "docs",
-    "spec",
-    "css",
-    "js"
-  ],
-  "moduleType": [
-    "amd",
-    "globals",
-    "node"
-  ]
+  "keywords": ["motion", "graphics", "animation", "effects"],
+  "ignore": ["**/.*", "bower_components", "node_modules", "coverage", "docs", "spec", "css", "js"],
+  "moduleType": ["amd", "globals", "node"]
 }
