--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "browserify": "^16.5.0",
     "browserify-istanbul": "^3.0.1",
     "coffee-loader": "^0.9.0",
-    "coffeeify": "latest",
+    "coffeeify": "^3.0.1",
     "coveralls": "^3.0.9",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
