--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "url": "https://github.com/mojs/mojs/issues"
   },
   "homepage": "https://github.com/mojs/mojs",
+  "dependencies": {
+    "@babel/runtime": "^7.8.7"
+  },
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
-    "@babel/runtime": "^7.8.7",
     "babel-loader": "^8.0.6",
     "brfs": "^2.0.2",
     "browserify": "^16.5.0",
