--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "browserify-istanbul": "^3.0.1",
     "coffee-loader": "^0.9.0",
     "coffeeify": "^3.0.1",
+    "coffeescript": "^1.12.7",
     "coveralls": "^3.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
