--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,4 @@
+/api
 /coverage
 /spec
 /js
@@ -8,3 +9,5 @@ karma.conf.js
 webpack.config.js
 npm-debug.log
 todo.md
+CODE_OF_CONDUCT.md
+CONTRIBUTING.md
