--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "karma-sauce-launcher": "^2.0.2",
     "phantomjs-polyfill": "0.0.2",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.9.2"
