--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sauce-launcher": "^2.0.2",
     "phantomjs-polyfill": "0.0.2",
+    "terser-webpack-plugin": "^3.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
