--- a/package.json
+++ b/package.json
@@ -54,18 +54,22 @@
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
     "gulp-watch": "^5.0.1",
+    "jasmine": "^3.5.0",
     "karma": "^4.4.1",
     "karma-babel-preprocessor": "^8.0.1",
     "karma-browserify": "^7.0.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-clear-screen-reporter": "^1.0.0",
     "karma-cli": "^2.0.0",
+    "karma-coffee-preprocessor": "^1.0.1",
     "karma-coverage": "^2.0.2",
+    "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^3.1.1",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sauce-launcher": "^2.0.2",
     "phantomjs-polyfill": "0.0.2",
     "terser-webpack-plugin": "^3.0.0",
+    "puppeteer": "^3.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
