--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ install:
 
 after_script:
   - if [[ `node --version` == *v0.10* ]]; then cat ./coverage/lcov-report/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
+
+addons:
+  sauce_connect: true
