--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "coffeeify": "^3.0.1",
     "coffeescript": "^1.12.7",
     "coveralls": "^3.1.0",
+    "create-file-webpack": "^1.0.2",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-changed": "^4.0.2",
