--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,21 @@
 language: node_js
+
 node_js:
-  - "node"
+  - 'node'
+
+cache:
+  directories:
+    - node_modules
 
 before_install:
-- npm i -g npm@latest
+  - npm update
 
 install:
-- npm ci
+  - npm ci
 
-after_script:
-  - if [[ `node --version` == *v0.10* ]]; then cat ./coverage/lcov-report/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
+script:
+  - npm run test
+  - npm run coveralls
 
 addons:
   sauce_connect: true
