--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "karma-coverage": "^2.0.2",
     "karma-jasmine": "^3.3.1",
     "karma-sauce-launcher": "^4.1.5",
+    "karma-summary-reporter": "^1.8.0",
     "puppeteer": "^4.0.1",
     "terser-webpack-plugin": "^3.0.6",
     "webpack": "^4.43.0",
