Configure the package for unpkg CDN

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@mojs/core",
   "version": "0.288.2",
   "description": "The motion graphics toolbelt for the web",
-  "main": "dist/mo.js",
+  "main": "dist/mo.umd.js",
+  "unpkg": "dist/mo.umd.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js",
     "dev": "webpack --config webpack.dev.js --progress",
@@ -15,6 +16,9 @@
     "type": "git",
     "url": "git+https://github.com/mojs/mojs.git"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "motion",
     "graphics",
